Added add-note component and some styiling

--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,4 @@
 @import url(cmps/main-header.css);
 @import url(apps/keep/note-card.css);
 @import url(apps/keep/note-filter.css);
+@import url(apps/keep/add-note.css);
