--- a/css/apps/keep/note-filter.css
+++ b/css/apps/keep/note-filter.css
@@ -1,4 +1,21 @@
 .note-filter {
+  background-color: rgb(0, 218, 218);
+  height: 50px;
   margin: auto;
+  margin-top: 10px;
   text-align: center;
+  line-height: 50px;
+}
+
+.note-filter input {
+  width: 50%;
+  max-width: 250px;
+  height: 30px;
+  font-size: 1.2rem;
+}
+
+.note-filter select {
+  max-width: 65px;
+  height: 30px;
+  font-size: 1.2rem;
 }
