Added dynamic comps, add/remove items in list note

--- a/css/apps/keep/note-card.css
+++ b/css/apps/keep/note-card.css
@@ -18,3 +18,9 @@
   margin: 5px;
   background-color: rgb(165, 182, 17);
 }
+
+.note-img {
+  margin: auto;
+  width: 100%;
+  max-height: 300px;
+}
