--- a/css/apps/keep/add-note.css
+++ b/css/apps/keep/add-note.css
@@ -7,6 +7,16 @@
   line-height: 50px;
 }
 
+.new-note-lable {
+  font-size: 1.3rem;
+  margin-right: 10px;
+}
+
+.add-note input {
+  height: 30px;
+  font-size: 1.2rem;
+}
+
 .add-btn {
   background-color: azure;
   padding: 5px;
