--- a/css/apps/keep/note-card.css
+++ b/css/apps/keep/note-card.css
@@ -1,3 +1,11 @@
+button {
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
+
 .notes-cont {
   display: flex;
   flex-direction: column;
@@ -6,7 +14,9 @@
 }
 
 .note-card {
-  background-color: rgb(89, 186, 216);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 250px;
   margin: 10px;
   padding: 10px;
@@ -16,13 +26,15 @@
 
 .note-card span {
   margin: 5px;
-  opacity: 0.6;
+  margin-left: 0px;
+  opacity: 0.7;
   cursor: pointer;
   transition: 0.2s;
 }
 
 .note-card span:hover {
   opacity: 1;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -30,4 +42,39 @@
   margin: auto;
   width: 100%;
   max-height: 300px;
+}
+
+.btns-cont {
+  display: flex;
+  margin-top: 10px;
+}
+
+/* .remov-note-btn {
+  font-size: 1.3rem;
+  color: rgb(168, 0, 0);
+} */
+
+.fill-and-stroke-div {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  margin: 5px;
+  width: 22px;
+  height: 22px;
+}
+
+.fill-and-stroke-div:hover {
+  opacity: 1;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.fill-and-stroke-input {
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 22px;
+  height: 22px;
 }
