--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,6 @@
 @import url(apps/keep/note-card.css);
 @import url(apps/keep/note-filter.css);
 @import url(apps/keep/add-note.css);
+@import url(apps/mail/mail-list.css);
+@import url(apps/mail/mail-index.css);
+@import url(apps/mail/mail-preview.css);
