--- a/css/apps/mail/mail-index.css
+++ b/css/apps/mail/mail-index.css
@@ -21,3 +21,22 @@
 .mail-folder-list-ul:hover{
     cursor: pointer;
 }
+
+
+.mail-compose {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.712);
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    line-height: 1.5em;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
