--- a/css/apps/mail/mail-preview.css
+++ b/css/apps/mail/mail-preview.css
@@ -1,7 +1,24 @@
 .mail-preview{
+    display: flex;
+    justify-content: space-between;
+    width: 85vw;
     background-color: gainsboro;
     border: 1px solid;
     padding-top: 5px;
     padding-bottom: 5px;
     max-width: 100%;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.mail-preview-mail {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.mail-subject {
+    font-style: italic;
 }
