added notes styling

--- a/css/apps/keep/note-card.css
+++ b/css/apps/keep/note-card.css
@@ -4,21 +4,35 @@ button {
 
 ul {
   list-style: none;
+  padding-left: 15px;
+  margin: auto;
+  font-size: 1.1rem;
+}
+
+p {
+  text-align: center;
+  font-size: 1.4rem;
 }
 
 .notes-cont {
-  display: flex;
-  flex-direction: column;
-  flex-flow: row;
-  flex-wrap: wrap;
+  column-width: 170px;
+  column-gap: 0px;
+  column-fill: balance;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 10px;
+  padding: 20px;
 }
 
 .note-card {
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 250px;
-  margin: 10px;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 13px;
   padding: 10px;
   border-radius: 10px;
   list-style-type: none;
@@ -74,4 +88,30 @@ ul {
   top: 0;
   width: 22px;
   height: 22px;
+}
+
+/* BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT */
+
+@media (min-width: 520px) {
+  .notes-cont {
+    column-width: 210px;
+  }
+}
+
+/* BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT */
+
+@media (min-width: 720px) {
+  .notes-cont {
+    column-width: 250px;
+  }
 }
