--- a/css/apps/keep/add-note.css
+++ b/css/apps/keep/add-note.css
@@ -1,26 +1,29 @@
 .add-note {
-  background-color: rgb(0, 218, 218);
-  height: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(64, 201, 194);
+  height: 80px;
   margin: auto;
-  margin-top: 10px;
   text-align: center;
-  line-height: 50px;
 }
 
 .new-note-lable {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   margin-right: 10px;
 }
 
 .add-note input {
   height: 30px;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
 }
 
 .add-btn {
   background-color: azure;
   padding: 5px;
   transition: 0.2s;
+  margin-left: 10px;
 }
 
 .add-btn:hover {
@@ -42,4 +45,38 @@
 .type:hover {
   background-color: rgb(137, 255, 82);
   cursor: pointer;
+}
+
+/* BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT */
+
+@media (min-width: 440px) {
+  .add-note {
+    flex-direction: row;
+    justify-content: center;
+    height: 50px;
+  }
+}
+
+/* BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT
+BREAK POINT */
+
+@media (min-width: 510px) {
+  .new-note-lable {
+    font-size: 1.3rem;
+  }
+
+  .add-note input {
+    width: 235px;
+    height: 35px;
+    font-size: 1rem;
+  }
 }
