--- a/css/apps/keep/note-filter.css
+++ b/css/apps/keep/note-filter.css
@@ -1,26 +1,39 @@
 .note-filter {
-  background-color: rgb(0, 218, 218);
+  background-color: rgb(64, 201, 194);
   height: 50px;
   margin: auto;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   text-align: center;
   line-height: 50px;
 }
 
 .note-filter input {
   width: 50%;
-  max-width: 250px;
   height: 30px;
-  font-size: 1.2rem;
+  font-size: 0.9rem;
 }
 
 .note-filter select {
-  max-width: 65px;
+  max-width: 45px;
   height: 30px;
-  font-size: 1.2rem;
+  font-size: 0.9rem;
 }
 
 .filter-span {
   font-size: 1.3rem;
   margin-right: 10px;
+}
+
+@media (min-width: 290px) {
+  .note-filter input {
+    max-width: 200px;
+
+    font-size: 1.2rem;
+  }
+
+  .note-filter select {
+    max-width: 65px;
+
+    font-size: 1.2rem;
+  }
 }
