--- a/css/apps/keep/note-card.css
+++ b/css/apps/keep/note-card.css
@@ -1,10 +1,11 @@
 /* @font-face {
   font-family: note-font;
-  src: url(../../../assets/fonts/itim/Itim-Regular.ttf);
+  src: url(../../../assets/images/logo.png);
 } */
 
 button {
   cursor: pointer;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 ul {
@@ -12,12 +13,13 @@ ul {
   padding-left: 15px;
   margin: auto;
   font-size: 1.1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 p {
   text-align: center;
   font-size: 1.4rem;
-  /* font-family: note-font; */
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .notes-cont {
@@ -27,7 +29,8 @@ p {
   width: 100%;
   margin: auto;
   margin-bottom: 10px;
-  padding: 20px;
+  padding: 1px;
+  padding-top: 12px;
 }
 
 .note-card {
@@ -36,7 +39,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 90%;
+  width: 94%;
   margin: auto;
   margin-bottom: 13px;
   padding: 10px;
@@ -49,7 +52,7 @@ p {
 .note-card span {
   margin: 5px;
   margin-left: 0px;
-  opacity: 0.7;
+  opacity: 0.8;
   cursor: pointer;
   transition: 0.2s;
 }
@@ -58,6 +61,10 @@ p {
   opacity: 1;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.delete-item {
+  color: rgb(146, 0, 0);
 }
 
 .note-img {
@@ -69,6 +76,20 @@ p {
 .btns-cont {
   display: flex;
   margin-top: 10px;
+}
+
+.adding-item-to-list-cont {
+  max-width: 95%;
+}
+
+.adding-item-to-list-cont input {
+  width: 95%;
+}
+
+.list-btn {
+  opacity: 0.9;
+  font-weight: bold;
+  padding: 3px;
 }
 
 .fill-and-stroke-div {
@@ -106,6 +127,10 @@ BREAK POINT */
 @media (min-width: 520px) {
   .notes-cont {
     column-width: 210px;
+  }
+
+  .note-card {
+    width: 92%;
   }
 }
 
