--- a/css/apps/keep/note-filter.css
+++ b/css/apps/keep/note-filter.css
@@ -17,11 +17,13 @@
   max-width: 45px;
   height: 30px;
   font-size: 0.9rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .filter-span {
   font-size: 1.3rem;
   margin-right: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 @media (min-width: 290px) {
