--- a/css/apps/mail/mail-preview.css
+++ b/css/apps/mail/mail-preview.css
@@ -2,12 +2,20 @@
   display: flex;
   justify-content: space-between;
   width: 85vw;
-  background-color: gainsboro;
+  background-color: rgb(230, 230, 230);
   border: 1px solid;
   padding-top: 5px;
   padding-bottom: 5px;
+  border: none;
   max-width: 100%;
+  cursor: pointer;
+  transition: 0.2s;
 }
+
+.mail-preview:hover {
+  background-color: rgb(208, 230, 255);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -29,4 +37,9 @@ a {
 
 .unread {
   font-weight: bold;
+  font-style: normal;
+}
+
+.unreadBgc {
+  background-color: beige;
 }
