created new mail-compse css file

--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,4 @@
 @import url(apps/mail/mail-list.css);
 @import url(apps/mail/mail-index.css);
 @import url(apps/mail/mail-preview.css);
+@import url(apps/mail/mail-compose.css)
