changes to the mail object *integrating the changes in the various functions

--- a/css/apps/mail/mail-preview.css
+++ b/css/apps/mail/mail-preview.css
@@ -38,8 +38,9 @@ a {
 .unread {
   font-weight: bold;
   font-style: normal;
+  background-color: beige;
 }
 
-.unreadBgc {
-  background-color: beige;
+.mail-subject {
+  font-style: italic;
 }
