--- a/css/basic/main-layout.css
+++ b/css/basic/main-layout.css
@@ -1,4 +1,14 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.user-msg {
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  font-size: 1.1rem;
+  background-color: rgb(0, 65, 56);
+  color: bisque;
+  padding: 3px;
 }
