--- a/css/basic/main-layout.css
+++ b/css/basic/main-layout.css
@@ -5,8 +5,8 @@
 
 .user-msg {
   position: absolute;
-  top: 50px;
-  right: 20px;
+  top: 1px;
+  right: 30%;
   font-size: 1.1rem;
   background-color: rgb(0, 65, 56);
   color: bisque;
