--- a/css/apps/keep/note-filter.css
+++ b/css/apps/keep/note-filter.css
@@ -2,7 +2,7 @@
   background-color: rgb(64, 201, 194);
   height: 50px;
   margin: auto;
-  /* margin-top: 10px; */
+  margin-top: 10px;
   text-align: center;
   line-height: 50px;
 }
