--- a/css/apps/mail/mail-list.css
+++ b/css/apps/mail/mail-list.css
@@ -1,3 +1,8 @@
-.mail-list-ul{
-    list-style: none;
+.mail-list {
+  width: calc(100% - 140px);
+}
+
+.mail-list-ul {
+  list-style: none;
+  margin-top: 10px;
 }
