--- a/css/basic/main-layout.css
+++ b/css/basic/main-layout.css
@@ -10,5 +10,8 @@
   font-size: 1.1rem;
   background-color: rgb(0, 65, 56);
   color: bisque;
-  padding: 3px;
+  padding: 6px;
+  height: 35px;
+  line-height: 20px;
+  border-radius: 4px;
 }
