added mail-details.css added hover feature on + compose button

--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,5 @@
 @import url(apps/mail/mail-list.css);
 @import url(apps/mail/mail-index.css);
 @import url(apps/mail/mail-preview.css);
-@import url(apps/mail/mail-compose.css)
+@import url(apps/mail/mail-compose.css);
+@import url(apps/mail/mail-details.css);
