--- a/css/apps/mail/mail-details.css
+++ b/css/apps/mail/mail-details.css
@@ -1,3 +1,49 @@
-.mail-details h3{
-    display: inline-block;
+.subject {
+  margin-top: 8px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.sender {
+  text-align: center;
+  margin: auto;
+}
+
+.sender > * {
+  display: inline-block;
+  margin: auto;
+  padding: 5px;
+}
+
+.sender h3 {
+  font-size: 1.3rem;
+}
+
+.sender span {
+  font-size: 1rem;
+}
+
+.mail-content {
+  margin-top: 20px;
+}
+
+.btns-details-cont {
+  text-align: center;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.details-btn {
+  text-align: center;
+  margin: auto;
+  margin: 3px;
+  padding: 7px;
+  background-color: rgb(228, 228, 228);
+  cursor: pointer;
+  transition: 0.25s;
+}
+
+.details-btn:hover {
+  background-color: rgb(212, 212, 212);
 }
