--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,4 @@
 @import url(apps/mail/mail-preview.css);
 @import url(apps/mail/mail-compose.css);
 @import url(apps/mail/mail-details.css);
+@import url(apps/books/books-style.css);
