--- a/css/apps/books/books-style.css
+++ b/css/apps/books/books-style.css
@@ -241,7 +241,7 @@ textarea {
 .about-page p {
   padding: 25px;
 }
-
+/* 
 .user-msg {
   position: absolute;
   top: 50px;
@@ -249,4 +249,4 @@ textarea {
   font-size: 1.3rem;
   background-color: rgb(72, 255, 72);
   padding: 5px;
-}
+} */
