--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,4 @@
 @import url(apps/mail/mail-details.css);
 @import url(pages/home-page.css);
 @import url(apps/books/books-style.css);
+@import url(../css/pages/about-page.css);
