--- a/css/pages/home-page.css
+++ b/css/pages/home-page.css
@@ -1,10 +1,69 @@
-
-.about-images{
+.home-page {
     display: flex;
-    justify-content: center;
-    gap:10px;
+    flex-direction: column;
+    align-items: center;
 }
-.about-images img{
-    width: 250px;
-    height: 220px;
+
+.home-logo img{
+    width: 200px;
+    height: 150px;
+    border-radius: 20px;
+}
+
+.apps-images-ul{
+    display: flex;
+    flex-direction: column;
+}
+.apps-images-ul img{
+    width: 25vw;
+    height: 20vh;
+    min-width: 250px;
+    border-radius: 20px;
+}
+
+
+/* Break Point!
+Break Point!
+Break Point!
+Break Point! */
+
+@media (min-width: 600px) {
+    .home-page {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .home-logo{
+        padding-top: 20px;
+        margin-bottom: 20px;
+    }
+    .home-logo img{
+        width: 300px;
+        height: 250px;
+        border-radius: 20px;
+    }
+    
+    .pick-app-title{
+        margin-bottom: 20px;
+        font-size: 2rem;
+        border-bottom: 2px solid;
+    }
+    
+    .apps-images-ul {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+    .apps-images-ul img{
+        filter: grayscale(80%);
+        opacity: 0.6;
+        max-width: 300px;
+        min-width: unset;
+        height: 25vh;
+        border-radius: 20px;
+    }
+    .apps-images-ul img:hover{
+        opacity: 1;
+        filter:unset;
+}
 }
