--- a/css/apps/mail/mail-index.css
+++ b/css/apps/mail/mail-index.css
@@ -6,6 +6,7 @@
   width: calc(100% - 90px);
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 .search-input {
@@ -14,6 +15,7 @@
   max-width: 350px;
   margin: auto;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .compose-and-folder {
